cookbooks/microservices/outputs/dep-generic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/instance: generic-deployment
    app.kubernetes.io/name: generic-deployment
    version: version-1669879938710694787
  name: generic-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: generic-deployment
      app.kubernetes.io/name: generic-deployment
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: generic-deployment
        app.kubernetes.io/name: generic-deployment
        version: version-1669879938711217429
    spec:
      containers:
      - args:
        - -c
        - /scripts/start.sh
        command:
        - /bin/sh
        image: docker.io/hashicorp/http-echo:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /health
            port: http
        name: generic-deployment
        ports:
        - containerPort: 9000
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: http
        resources: {}
        volumeMounts:
        - mountPath: /scripts
          name: cm-generic-deployment
      volumes:
      - configMap:
          defaultMode: 484
          name: cm-generic-deployment
        name: cm-generic-deployment
status: {}
